--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -120,140 +120,15 @@
             app:layout_constraintBottom_toBottomOf="@+id/home_today_music_total_tv"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-        <HorizontalScrollView
-            android:id="@+id/home_today_music_total_hs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/home_today_music_album_rv"
+            android:layout_width="match_parent"
+            android:layout_height="210dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="20dp"
+            tools:listitem="@layout/item_album"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="horizontal"
-            android:scrollbars="none"
-            android:overScrollMode="never"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home_today_music_total_tv">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/home_today_music_01_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:orientation="vertical">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <ImageView
-                            android:id="@+id/home_today_music_album_01_iv"
-                            android:layout_width="150dp"
-                            android:layout_height="150dp"
-                            android:scaleType="fitCenter"
-                            android:src="@drawable/img_album_exp2"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"/>
-
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginBottom="5dp"
-                            android:src="@drawable/widget_black_play"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"/>
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="LILAC"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:layout_marginTop="10dp"/>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="아이유(IU)"
-                        android:textSize="13sp"
-                        android:textColor="#a8a8a8"
-                        android:layout_marginTop="3dp"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/home_today_music_02_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/home_today_music_album_02_iv"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/img_album_exp3"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Next Level"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:layout_marginTop="10dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="aespa"
-                        android:textSize="13sp"
-                        android:textColor="#a8a8a8"
-                        android:layout_marginTop="3dp"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/home_today_music_03_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/home_today_music_album_03_iv"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/img_album_exp13"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="TOMBOY"
-                        android:textSize="16sp"
-                        android:textColor="@color/black"
-                        android:layout_marginTop="10dp"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="(여자)아이들"
-                        android:textSize="13sp"
-                        android:textColor="#a8a8a8"
-                        android:layout_marginTop="3dp" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </HorizontalScrollView>
+            app:layout_constraintTop_toBottomOf="@id/home_today_music_title_tv"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/home_banner_vp"
@@ -262,7 +137,7 @@
             android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home_today_music_total_hs">
+            app:layout_constraintTop_toBottomOf="@+id/home_today_music_album_rv">
         </androidx.viewpager2.widget.ViewPager2>
 
         <TextView
