--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -274,7 +274,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login_phone_login_ly">
 
         <ImageView
-            android:id="@+id/longin_naver_iv"
+            android:id="@+id/login_naver_iv"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/naver_44"
@@ -293,7 +293,7 @@
             android:layout_marginEnd="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/longin_naver_iv"
+            app:layout_constraintStart_toEndOf="@+id/login_naver_iv"
             app:layout_constraintEnd_toStartOf="@+id/login_apple_iv"/>
 
         <ImageView
